Build custom JRE.  Reorganized src file structure. Documented Java10, building, running.